--- a/mini/app.wxss
+++ b/mini/app.wxss
@@ -1,10 +1,28 @@
+page {
+  background-color: #fdfdfd;
+  font-size: 28rpx;
+  color: #181818;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 image {
   display: block;
   width: 100%;
   margin: auto;
 }
 
-view, text {
-  font-size: 28rpx;
+.font-general {
   color: #181818;
+}
+
+.font-gray {
+  color: #7b7b7b;
+}
+
+.font-gray-tint {
+  color: #acacac;
+}
+
+.font-gray-light {
+  color: #d2d2d2;
 }
