--- a/mini/app.wxss
+++ b/mini/app.wxss
@@ -1,3 +1,5 @@
+@import '/assets/css/iconfont.wxss';
+
 page {
   background-color: #fdfdfd;
   font-size: 28rpx;
@@ -9,6 +11,26 @@ image {
   display: block;
   width: 100%;
   margin: auto;
+}
+
+.ellipsis {
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  white-space: normal !important;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+
+.ellipsis-2 {
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  white-space: normal !important;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .font-general {
