--- a/mini/components/GoodsList/index.wxss
+++ b/mini/components/GoodsList/index.wxss
@@ -23,10 +23,32 @@
 .goods-img {
   width: 100%;
   overflow: hidden;
+  position: relative;
+}
+
+.v-play {
+  width: 100rpx;
+  height: 100rpx;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 50%;
+  color: #fff;
+  font-size: 44rpx;
+  line-height: 100rpx;
+  text-align: center;
 }
 
 .goods-info {
-  padding: 10rpx;
+  padding: 12rpx 6rpx 6rpx 12rpx;
+}
+
+.goods-title {
+  margin-bottom: 12rpx;
 }
 
 .goods-tip {
@@ -79,6 +101,7 @@
 
 .goods-row {
   font-size: 24rpx;
+  padding-bottom: 12rpx;
 }
 
 .goods-row.price {
@@ -90,4 +113,14 @@
 .goods-priceval {
   font-size: 36rpx;
   margin-right: 10rpx;
+}
+
+.iconfont.tmall {
+  color: #ff0036;
+}
+.iconfont.jhs {
+  color: #e61414;
+}
+.iconfont.tqg {
+  color: #ff852a;
 }
