--- a/mini/components/GoodsList/index.wxss
+++ b/mini/components/GoodsList/index.wxss
@@ -73,9 +73,8 @@
   font-size: 20rpx;
   line-height: 1.5;
   color: #e83b47;
-  background-color: #fef5f7;
+  background-color: #FDE9EA;
   border-radius: 6rpx;
-  border: 1rpx solid;
   box-sizing: border-box;
   padding: 0 16rpx;
 }
@@ -83,20 +82,19 @@
 .goods-quan-dot {
   color: inherit;
   display: inline-block;
-  width: 10rpx;
-  height: 10rpx;
+  width: 12rpx;
+  height: 12rpx;
   border-radius: 50%;
-  border: 1rpx solid;
   position: absolute;
   top: 0;
   bottom: 0;
   margin: auto;
-  left: -4rpx;
+  left: -6rpx;
   background: #fff;
 }
 
 .goods-quan-dot.right {
-  right: -4rpx;
+  right: -6rpx;
   left: auto;
 }
 
@@ -108,4 +106,9 @@
 .goods-priceval {
   font-size: 36rpx;
   margin-right: 10rpx;
+}
+
+.iconfont.tqg, .iconfont.jhs {
+  margin-right: 8rpx;
+  font-size: 1.4em;
 }
