--- a/mini/pages/index/index.wxml
+++ b/mini/pages/index/index.wxml
@@ -1,10 +1,16 @@
 <view>
   <view>
-    <text class="nav-btn {{rankType == navs[index].type ? 'on' : ''}}" wx:for="{{navs}}" wx:key="index" data-index="{{index}}" bindtap="switchNav">{{item.title}}</text>
+    <text class="nav-btn {{rankType == navs[index].type ? 'on' : ''}}" wx:for="{{navs}}" wx:key="index"
+      data-index="{{index}}" bindtap="switchNav">{{item.title}}</text>
   </view>
-  <view hidden="{{!showCategory}}">
-    <text class="category {{cid == category[index].cid ? 'on' : ''}}" wx:for="{{category}}"
-      wx:key="index" data-cid="{{item.cid}}" bindtap="switchCategory">{{item.cname}}</text>
-  </view>
+  <scroll-view scroll-x="true" scroll-left="{{categoryLeft}}" scroll-with-animation="true" class="category-box" hidden="{{!showCategory}}">
+    <view class="category-ul" style="width: {{categoryUlW}}rpx">
+      <block wx:for="{{category}}" wx:key="index">
+        <text class="category {{cid == category[index].cid ? 'on' : ''}}" 
+        data-cid="{{item.cid}}"
+          bindtap="switchCategory">{{item.cname}}</text>
+      </block>
+    </view>
+  </scroll-view>
   <goods-list prop-list="{{list}}"></goods-list>
 </view>
