--- a/mini/pages/index/index.wxss
+++ b/mini/pages/index/index.wxss
@@ -8,6 +8,7 @@
 
 .nav-btn.on {
 	color: #212121;
+	font-weight: bold;
 	position: relative;
 }
 
@@ -15,15 +16,27 @@
 	content: '';
 	height: 4rpx;
 	position: absolute;
-	right: 12rpx;
+	right: 32rpx;
 	bottom: 15rpx;
-	left: 12rpx;
+	left: 32rpx;
 	background: -webkit-linear-gradient(left, #e83b47, #E8666F 10%, #FDD9DB);
+}
+
+.category-box {
+	width: 100%;
+	padding-left: 30rpx;
+	box-sizing: border-box;
+	overflow-x: scroll;
+}
+
+.category-ul {
+	width: 2000rpx;
 }
 
 .category {
 	display: inline-block;
-	padding: 10rpx 20rpx;
+	margin-right: 30rpx;
+	padding: 10rpx 0;
 	line-height: 40rpx;
 	color: #999;
 }
