--- a/mini/pages/index/index.wxss
+++ b/mini/pages/index/index.wxss
@@ -1,48 +1,50 @@
-.nav-btn {
-	display: inline-block;
-	padding: 16rpx 20rpx 24rpx;
-	font-size: 32rpx;
-	line-height: 50rpx;
-	color: #999;
+.fixicon {
+  position: fixed;
+  right: 40rpx;
+  bottom: 60rpx;
+  font-size: 100rpx;
+  z-index: 999;
 }
 
-.nav-btn.on {
-	color: #212121;
-	font-weight: bold;
-	position: relative;
+.box {
+  margin: 30rpx;
+  padding: 10rpx 0 50rpx;
+  border: 1rpx solid #ddd;
+  border-radius: 20rpx;
+  background-color: #fff;
 }
 
-.nav-btn.on::after {
-	content: '';
-	height: 4rpx;
-	position: absolute;
-	right: 32rpx;
-	bottom: 15rpx;
-	left: 32rpx;
-	background: -webkit-linear-gradient(left, #e83b47, #E8666F 10%, #FDD9DB);
+.row {
+  padding: 20rpx 40rpx;
 }
 
-.category-box {
-	width: 100%;
-	padding-left: 30rpx;
-	box-sizing: border-box;
-	overflow-x: scroll;
+.row.hover {
+  background-color: rgba(180, 180, 180, 0.1);
 }
 
-.category-ul {
-	width: 2000rpx;
+.cell {
+  padding: 8rpx 0;
 }
 
-.category {
-	display: inline-block;
-	margin-right: 30rpx;
-	padding: 10rpx 0;
-	line-height: 40rpx;
-	color: #999;
-	box-sizing: border-box;
+.title {
+  font-size: 32rpx;
 }
 
-.category.on {
-	color: #212121;
-	font-weight: bold;
+.i-xin {
+  color: #FFDF00;
+  font-size: 30rpx;
+  margin-right: 10rpx;
+}
+
+.color-block {
+  display: inline-block;
+  width: 30rpx;
+  height: 30rpx;
+  border-radius: 50%;
+  margin-right: 10rpx;
+}
+
+.check {
+  margin-left: 30rpx;
+  font-size: 40rpx;
 }
