--- a/h5/src/assets/css/base.scss
+++ b/h5/src/assets/css/base.scss
@@ -8,6 +8,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: $general;
+    font-size: 14px;
 }
 
 span {
@@ -59,6 +60,14 @@ img {
     -webkit-font-smoothing: antialiased;
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;
+}
+
+.ellipsis {
+    @include ellipsis();
+}
+
+.ellipsis-2 {
+    @include ellipsis(2);
 }
 
 .flex-con {
@@ -155,4 +164,16 @@ img {
     @extend .flex-wrap;
     @extend .flex-justify-sa;
     @extend .flex-vertical;
+}
+
+.font-large {
+    font-size: 20px;
+}
+
+.font-big {
+    font-size: 16px;
+}
+
+.font-small {
+    font-size: 12px;
 }
