--- a/mini/components/ToTop/index.wxml
+++ b/mini/components/ToTop/index.wxml
@@ -1,3 +1,3 @@
 <view class="fix-aside-btn {{show?'on':''}} fmix-center" bindtap="toTop">
-  <text class="iconfont icon-chevron-up"></text>
+  <text class="iconfont icon-zhiding"></text>
 </view>
