--- a/mini/pages/home/home.wxss
+++ b/mini/pages/home/home.wxss
@@ -13,3 +13,42 @@
   width: 80rpx;
   height: 80rpx;
 }
+
+.step-box {
+  margin: 20rpx;
+  padding: 0 20rpx 20rpx;
+  background-color: #fff;
+  border-radius: 20rpx;
+  box-shadow: 1rpx 1rpx 4rpx rgba(0, 0, 0, 0.1);
+}
+.step-title {
+  padding: 16rpx 0;
+  margin-bottom: 12rpx;
+  font-size: 32rpx;
+  font-weight: bold;
+  font-style: italic;
+  color: #42B983;
+}
+.steps {
+  display: flex;
+}
+.step-con {
+  flex:1;
+  text-align: right;
+}
+.step-num {
+  display: inline-block;
+  width: 40rpx;
+  height: 40rpx;
+  text-align: center;
+  line-height: 40rpx;
+  font-size: 28rpx;
+  font-style: italic;
+  font-weight: bold;
+  background-color: #2C3E50;
+  color: #EBF6FC;
+  border-radius: 50%;
+  margin-right: 10rpx;
+  padding-right: 4rpx;
+  box-sizing: border-box;
+}
